support_tools/swigwin-3.0.12/Examples/test-suite/errors/swig_identifier.i
%module xxx

%rename("foo bar") foobar;

int foobar(int);

